# xenon

./: .clang-format  .gitignore  Agents.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  compile_commands.json  run.sh  xam.cpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  document.cpp  document.hpp  edit_history.cpp  edit_history.hpp  file_manager.cpp  file_manager.hpp  text_position.cpp  text_position.hpp  text_range.cpp  text_range.hpp
src/features/: CMakeLists.txt  search_engine.cpp  search_engine.hpp
src/git/: CMakeLists.txt  git_manager.cpp  git_manager.hpp
src/lsp/: CMakeLists.txt  json_rpc.cpp  json_rpc.hpp  lsp_client.cpp  lsp_client.hpp
src/services/: CMakeLists.txt  settings_manager.cpp  settings_manager.hpp
src/ui/: CMakeLists.txt  breadcrumb_bar.cpp  breadcrumb_bar.hpp  command_palette.cpp  command_palette.hpp  completion_widget.cpp  completion_widget.hpp  editor_widget.cpp  editor_widget.hpp  file_explorer.cpp  file_explorer.hpp  find_replace_widget.cpp  find_replace_widget.hpp  main_window.cpp  main_window.hpp  problems_panel.cpp  problems_panel.hpp  quick_open_dialog.cpp  quick_open_dialog.hpp  search_panel.cpp  search_panel.hpp  search_replace_dialog.cpp  search_replace_dialog.hpp  settings_dialog.cpp  settings_dialog.hpp  split_pane_container.cpp  split_pane_container.hpp  status_bar.cpp  status_bar.hpp  style_manager.cpp  style_manager.hpp  syntax_highlighter.cpp  syntax_highlighter.hpp  terminal_widget.cpp  terminal_widget.hpp  theme_manager.cpp  theme_manager.hpp
